# HW8

./: .gitignore  README  data_processing.py  find.py  main.py  proxy_server.py  pyproject.toml
conf/: newsletter_database.py
data_selects/: find.py
newsletter/: consumer_email.py  consumer_sms.py  producer.py
newsletter/conf/: database.py
statics/: script.js
